--- a/ISBNvalidator/.project
+++ b/ISBNvalidator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HealthyCoderApp</name>
+	<name>ISBNvalidator</name>
 	<comment></comment>
 	<projects>
 	</projects>
